# event_data_ETL_imperial_college

./: .gitignore  README.md  async_processpool.py  async_scraping.py  async_sync.py  data_cleaning.py  logger.py  main.py  pyproject.toml  requirements.txt  sc_async.py  sc_processpool.py  sc_sync.py  sc_threadpool.py  scraper.py  scrapper.py  scrapper_data_cleaning.py  scrapping_async.py  scrapping_processpool.py  sync_scraping.py  sync_sync.py  ver_async.py  ver_processpool.py  ver_sync.py
