[tool.poetry]
name = "concurrent-webscraping"
version = "0.1.0"
description = "Benchmarking the concurreny features with webscraping"
authors = ["Giwa Oluwatobi <oluwatobitobias@gmail.com>"]
readme = "README.md"
packages = [{include = "concurrent_webscraping"}]

[tool.poetry.dependencies]
python = "^3.10"
aiodns = "3.0.0"
aiohttp = "3.8.3"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "22.2.0"
beautifulsoup4 = "4.11.1"
brotli = "1.0.9"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
frozenlist = "1.3.3"
idna = "3.4"
lxml = "4.9.2"
multidict = "6.0.4"
pycares = "4.3.0"
pycparser = "2.21"
soupsieve = "2.3.2.post1"
urllib3 = "1.26.14"
yarl = "1.8.2"
pandas = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
